Add bcrypt & express-validator, Set auth.controler & register
